[gd_scene load_steps=10 format=3 uid="uid://dgh0rnbsb6o7q"]

[ext_resource type="Theme" uid="uid://cosewbtd26cka" path="res://Assets/2D/UI/theme_a.tres" id="1_rvsfk"]
[ext_resource type="Script" path="res://Scenes/GUI/decorate_menu.gd" id="1_yyjg0"]
[ext_resource type="Script" path="res://Classes/StudioTexture.gd" id="3_qr6gy"]
[ext_resource type="Texture2D" uid="uid://byhy7ay4gf8ah" path="res://Assets/ThirdParty/Kenney-NL/UI Adventure Pack/PNG/buttonRound_beige.png" id="4_63ur0"]
[ext_resource type="Texture2D" uid="uid://quv7hi83dri5" path="res://Assets/2D/UI/rotate_guide.png" id="4_wbw3g"]
[ext_resource type="Texture2D" uid="uid://dfoi0btexvk1o" path="res://Assets/ThirdParty/Kenney-NL/UI Adventure Pack/PNG/arrowBrown_left.png" id="5_sqfrd"]

[sub_resource type="Gradient" id="Gradient_gobuk"]
colors = PackedColorArray(0, 0, 0, 0.278431, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_83u44"]
gradient = SubResource("Gradient_gobuk")
fill_to = Vector2(0, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_egma1"]
script = ExtResource("3_qr6gy")
starting_angle = 0.392699
rotate_cam = false

[node name="DecorateMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_rvsfk")
script = ExtResource("1_yyjg0")

[node name="ActiveHUD" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.304
offset_bottom = 0.159973
grow_horizontal = 2
texture = SubResource("GradientTexture2D_83u44")

[node name="ActiveVbox" type="VBoxContainer" parent="ActiveHUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.102
anchor_right = 0.97
anchor_bottom = 1.0
offset_left = -0.200001
offset_top = -0.112001
offset_right = 0.200012
grow_horizontal = 2
grow_vertical = 2

[node name="ActiveIcon" type="TextureRect" parent="ActiveHUD/ActiveVbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.75
texture = SubResource("ViewportTexture_egma1")
expand_mode = 1
stretch_mode = 5

[node name="ActiveLabel" type="Label" parent="ActiveHUD/ActiveVbox"]
layout_mode = 2
size_flags_vertical = 3
text = "Selected Item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActiveActions" type="HBoxContainer" parent="ActiveHUD/ActiveVbox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="RemoveActive" type="Button" parent="ActiveHUD/ActiveVbox/ActiveActions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove"

[node name="DuplicateActive" type="Button" parent="ActiveHUD/ActiveVbox/ActiveActions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Duplicate"

[node name="DoneActive" type="Button" parent="ActiveHUD/ActiveVbox/ActiveActions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Done"

[node name="Edit_Toolset" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_top = 0.871
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.160034
grow_horizontal = 2
grow_vertical = 2

[node name="RotateZone" type="TextureButton" parent="Edit_Toolset"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.05176e-05
offset_bottom = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_wbw3g")
ignore_texture_size = true
stretch_mode = 0

[node name="Spawn_Toolset" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.189
anchor_bottom = 0.106
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="BackButton" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("4_63ur0")
ignore_texture_size = true
stretch_mode = 5

[node name="BackIcon" type="TextureRect" parent="MarginContainer/BackButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.146
anchor_top = 0.148
anchor_right = 0.805
anchor_bottom = 0.765
offset_left = 0.0279989
offset_top = 0.0120001
offset_right = -0.0100021
offset_bottom = 0.034996
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_sqfrd")
stretch_mode = 5

[connection signal="pressed" from="ActiveHUD/ActiveVbox/ActiveActions/RemoveActive" to="." method="_active_buttons" binds= [0]]
[connection signal="pressed" from="ActiveHUD/ActiveVbox/ActiveActions/DuplicateActive" to="." method="_active_buttons" binds= [1]]
[connection signal="pressed" from="ActiveHUD/ActiveVbox/ActiveActions/DoneActive" to="." method="_active_buttons" binds= [2]]
[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
